---------------------------------------------------------------------------------------------------
Version: 1.1.10
Date: 2021.09.02
  Bugfixes:
    - Reverted Object Scanner "fix" as it is now fixed in Factorio 1.1.39 - required base version raised accordingly.
---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: 2021.08.30
  Bugfixes:
    - "Fix" a regression in Factorio 1.1.38 that prevented Object Scanners from stacking in the MAM.
---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: 2021.08.25
  Changes:
    - Lizard Doggos can be healed by feeding them another Paleberry.
  Bugfixes:
    - Added sanity check for recipe ingredient counts
    - Used the above sanity check to find that Fabric was listed as craftable in the Constructor, instead of the Assembler.
    - Harvesting a plant while standing too close could lead to getting stuck. (#91)
  Modding:
    - Improved compatibility with Even Distribution (it was buggy with Splitters/Mergers) and added it to optional dependencies.
    - Ensured compatibility with Factory Planner
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2021.08.20
  Locale:
    - Fixed missing locale entry for Parachute description.
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2021.08.18
  Bugfixes:
    - Fix another infinite concrete glitch (#89)
  Locale:
    - Latest Russian text fixes
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2021.08.17
  Bugfixes:
    - Fix crash when editor is used to delete tiles under Foundation (#84)
    - Deconstructing a blocked foundation would yield infinite concrete (#85)
    - Fix crash when a game admin deletes a player who tamed a lizard doggo (#86)